# git-tree-cli

./: pyproject.toml  setup.py
src/: gittree.py
