[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gittree"
version = "0.0.1"
authors = [{name="Jeusto", email="contact@jeusto.com"},]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "gittree.jeusto.com"
"Bug Tracker" = "https://github.com/jeusto/gittree/issues"
